--- a/i3-laptop/i3status.conf
+++ b/i3-laptop/i3status.conf
@@ -52,15 +52,15 @@ battery 0 {
         last_full_capacity = true
         integer_battery_capacity = true
         status_chr = "⚡"
-        status_bat = "🔋"
+        status_bat = ""
         status_unk = "?"
-        status_full = "☻"
+        status_full = ""
         low_threshold = 25
         threshold_type = percentage
 }
 
 memory {
-        format = "🧠 %used / %total "
+        format = "%used / %total "
         threshold_degraded = "20%"
         threshold_critical = "10%"
         format_degraded = "MEMORY LOW < %free"
@@ -68,5 +68,5 @@ memory {
 
 tztime local {
         timezone = "CET"
-        format = "🕓 %H:%M %-d/%-m"
+        format = "%H:%M %-d/%-m"
 }
