--- a/i3/config
+++ b/i3/config
@@ -8,7 +8,7 @@ font pango:Inconsolata Nerd Font 14
 bar {
   status_command i3status --config ~/.i3status.conf
   font pango:Inconsolata Nerd Font 14
-  tray_output DP-4
+  # tray_output DP-4
   separator_symbol " | "
   position top
   padding 0
