--- a/i3/desktop.conf
+++ b/i3/desktop.conf
@@ -1,5 +1,18 @@
 # Desktop conf
 
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+
+assign [class="Alacritty"] $ws1
+assign [class="google-chrome"] $ws1
+assign [class="obsidian"] $ws2
+assign [class="firefox"] $ws3
+assign [class="spotify"] $ws3
+assign [class="Slack"] $ws4
+
 # Multi monitor settings
 set $main_monitor DP-4
 set $second_monitor HDMI-0
