--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -25,7 +25,7 @@ order += "memory"
 order += "tztime local"
 
 cpu_usage {
-        format = " ⚙️ %usage "
+        format = " %usage "
 }
 
 load {
@@ -45,7 +45,7 @@ ethernet _first_ {
 }
 
 memory {
-        format = "🧠 %used / %total "
+        format = "%used / %total "
         threshold_degraded = "20%"
         threshold_critical = "10%"
         format_degraded = "MEMORY LOW < %free"
@@ -54,5 +54,5 @@ memory {
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
         timezone = "CET"
-        format = "🕓 %H:%M %-d/%-m"
+        format = "%H:%M %-d/%-m"
 }
