--- a/i3/config
+++ b/i3/config
@@ -1,8 +1,6 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 set $mod Mod4
 
-include ~/.config/i3/`hostname`.conf
-
 font pango:Inconsolata Nerd Font 14
 
 bar {
@@ -28,10 +26,11 @@ bar {
 
 exec --no-startup-id "picom -b --config ~/.config/picom.conf"
 
+include ~/code/dotfiles/i3/`hostname`.conf
+
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-bindsym $mod+End exec --no-startup-id sudo systemctl suspend
+bindsym $mod+End exec --no-startup-id systemctl suspend
 
 # Desktop media control
 bindsym $mod+Up exec pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -146,8 +145,6 @@ bindsym $mod+x exec flameshot gui
 # file-browser
 bindsym $mod+n exec pcmanfm
 
-for_window [all] border pixel 1
-
 # Show a floating calc terminal with Mod+c https://github.com/Qalculate/libqalculate
 for_window [class="Qalculate-gtk"] floating enable, resize set 800 400, move position center
 for_window [class="Qalculate-gtk"] move scratchpad
@@ -169,14 +166,6 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [class="^jetbrains-.+"][window_type=dialog] focus
 
-# Application specific assignments
-assign [class="Alacritty"] $ws1
-assign [class="google-chrome"] $ws1
-assign [class="obsidian"] $ws2
-assign [class="Slack"] $ws4
-assign [class="firefox"] $ws3
-assign [class="spotify"] $ws4
-
 # Background apps
 exec --no-startup-id nm-applet --indicator
 exec --no-startup-id copyq
@@ -187,7 +176,7 @@ exec --no-startup-id playerctld daemon
 exec --no-startup-id blueman-applet
 exec --no-startup-id pasystray
 exec --no-startup-id pactl load-module module-switch-on-connect
-exec --no-startup-id todoist
+# exec --no-startup-id todoist
 exec --no-startup-id qalculate-gtk
 exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
 exec --no-startup-id redshift-gtk
@@ -199,7 +188,6 @@ exec alacritty --command tmux
 exec obsidian
 exec $connectCheck && google-chrome
 
-exec obsidian
 # exec weekday && $connectCheck && slack
 # exec $connectCheck && firefox
 # exec $connectCheck && spotify
