--- a/i3/laptop.conf
+++ b/i3/laptop.conf
@@ -26,4 +26,6 @@ bindsym $mod+Home exec --no-startup-id i3lock -i ~/files/wallpapers/183_FyHF0dp.
 
 exec_always --no-startup-id feh --randomize --bg-fill ~/files/wallpapers/*
 
+exec --no-startup-id ~/apps/Heynote_1.4.2_x86_64.AppImage
+
 # vim: ft=i3config
