--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ bind s choose-tree -swZ -O name
 
 # bind C-s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
-set -g status-right "#(date +'%d-%m-%Y %H:%M')"
+# set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
 # set -sa terminal-overrides ",screen-256color:RGB"
