--- a/i3status.conf
+++ b/i3status.conf
@@ -15,13 +15,14 @@ general {
 }
 
 # order += "ipv6"
-# order += "ethernet _first_"
 order += "cpu_usage"
 # order += "disk /"
 # order += "disk /home"
 # order += "wireless _first_"
+# order += "ethernet _first_"
 # order += "load"
 order += "memory"
+order += "battery 0"
 order += "tztime local"
 
 cpu_usage {
@@ -44,6 +45,20 @@ ethernet _first_ {
         format_down = " no lan "
 }
 
+battery 0 {
+        format = "%status %percentage (%remaining %consumption)"
+        #format = " %status %percentage"
+        format_down = "No battery"
+        last_full_capacity = true
+        integer_battery_capacity = true
+        status_chr = "⚡"
+        status_bat = ""
+        status_unk = "?"
+        status_full = ""
+        low_threshold = 25
+        threshold_type = percentage
+}
+
 memory {
         format = "%used / %total "
         threshold_degraded = "20%"
@@ -52,7 +67,6 @@ memory {
 }
 
 tztime local {
-        # format = "%Y-%m-%d %H:%M:%S"
         timezone = "CET"
         format = "%H:%M %-d/%-m"
 }
