--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,8 @@
-set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_status_modules_right "application session language date_time"
+# set -g @catppuccin_status_left_separator "█"
+# set -g @catppuccin_status_right_separator "█"
+# set -g @catppuccin_language_text "#(swaymsg -t get_inputs | jq '.[0].xkb_active_layout_name')"
 
 # TMUX plugin manager
 set -g @tpm_plugins "            \
@@ -16,9 +20,10 @@ run-shell ~/.tmux/plugins/tpm/tpm
 # sort alphabetically
 bind s choose-tree -swZ -O name
 
-# bind C-s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-
-# set -g status-right "#(date +'%d-%m-%Y %H:%M')"
+# TODO: use a module for this
+# set -g status-right "#(swaymsg -t get_inputs | jq 'map(select(has(\"xkb_active_layout_name\")))[0].xkb_active_layout_name')"
+# set -g status-fg '#ffffff'
+# set -g status-interval 1
 
 # Add truecolor support
 # set -sa terminal-overrides ",screen-256color:RGB"
@@ -28,7 +33,6 @@ set -ag terminal-overrides ",$TERM:RGB"
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-# set -g status-bg '#414868'
 
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
@@ -71,6 +75,6 @@ set-option -g renumber-windows on
 # Enable vi keys.
 setw -g mode-keys vi
 
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind r source-file ~/.tmux.conf \;# display-message "Config reloaded..."
 
 set -sg escape-time 0
