--- a/sway/config
+++ b/sway/config
@@ -64,6 +64,15 @@ input "type:touchpad" {
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
+# Mediakeys
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl s +10%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl s 10%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
 #
 # Workspaces:
 #
@@ -250,7 +259,7 @@ bindsym $mod+x exec grim -g "$(slurp)" - | swappy -f -
 exec --no-startup-id nm-applet --indicator
 exec --no-startup-id copyq
 # exec --no-startup-id playerctld daemon
-exec --no-startup-id dropbox start
+# exec --no-startup-id dropbox start
 exec --no-startup-id blueman-applet
 # exec --no-startup-id pasystray
 # exec --no-startup-id pactl load-module module-switch-on-connect
@@ -264,6 +273,6 @@ exec alacritty --command tmux
 exec obsidian
 exec google-chrome
 
-exec weekday && $connectCheck && slack
+# exec weekday && $connectCheck && slack
 
 # vim: ft=i3config formatoptions-=t
