--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,6 +1,5 @@
-import = [
-  "~/.config/alacritty/themes/themes/catppuccin.toml"
-]
+# import = [ "~/.config/alacritty/themes/themes/catppuccin.toml" ]
+import = [ "~/.config/alacritty/themes/themes/github_light.toml" ]
 
 [bell]
 duration = 0
@@ -9,7 +8,7 @@ duration = 0
 TERM = "xterm-256color"
 
 [font]
-size = 20
+size = 16
 
 [font.normal]
 family = "Inconsolata Nerd Font"
