--- a/sway/config
+++ b/sway/config
@@ -16,27 +16,24 @@ set $right l
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-
-output "Dell Inc. DELL P2415Q D8VXF7AA0T9B" scale 1 mode 2560x1440@60Hz
+# output "Dell Inc. DELL P2415Q D8VXF7AA0TUB" scale 1.5 mode 3840x2160@30Hz
+# output "Dell Inc. DELL P2415Q D8VXF79M0FVL" scale 1.5 mode 3840x2160@30Hz
 
 ### Idle configuration
-#
+set $swaylock "swaylock -f -k -l -s fill -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png"
+
 exec swayidle -w \
-         timeout 600 'swaylock -f -c 000000' \
+         timeout 600 $swaylock \
          timeout 900 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep 'swaylock -f -c 000000'
+         before-sleep $swaylock
 
 ## Input configuration
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 #
 input "type:keyboard" {
-  xkb_layout dk,us
+  xkb_layout us,dk
   repeat_delay 250
   repeat_rate 50
   xkb_options caps:escape_shifted_capslock,grp:rctrl_rshift_toggle
@@ -261,9 +258,8 @@ exec --no-startup-id copyq
 # exec --no-startup-id playerctld daemon
 # exec --no-startup-id dropbox start
 exec --no-startup-id blueman-applet
-# exec --no-startup-id pasystray
-# exec --no-startup-id pactl load-module module-switch-on-connect
 exec --no-startup-id qalculate-gtk
+exec --no-startup-id darkman
 # exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
 
 set $connectCheck nm-online --quiet --timeout=300
@@ -271,7 +267,7 @@ set $connectCheck nm-online --quiet --timeout=300
 # Startup applications
 exec alacritty --command tmux
 exec obsidian
-exec google-chrome
+exec google-chrome-stable
 
 # exec weekday && $connectCheck && slack
 
