--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,3 @@
-# set -g @catppuccin_flavour 'mocha'
-# set -g @catppuccin_status_modules_right "application session language date_time"
-# set -g @catppuccin_status_left_separator "█"
-# set -g @catppuccin_status_right_separator "█"
-# set -g @catppuccin_language_text "#(swaymsg -t get_inputs | jq '.[0].xkb_active_layout_name')"
-
 # TMUX plugin manager
 set -g @tpm_plugins "            \
   tmux-plugins/tpm               \
@@ -11,6 +5,7 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
+  niksingh710/minimal-tmux-status
 "
 
 set -g @continuum-restore 'on'
@@ -18,11 +13,6 @@ run-shell ~/.tmux/plugins/tpm/tpm
 
 # sort alphabetically
 bind s choose-tree -swZ -O name
-
-# TODO: use a module for this
-# set -g status-right "#(swaymsg -t get_inputs | jq 'map(select(has(\"xkb_active_layout_name\")))[0].xkb_active_layout_name')"
-# set -g status-fg '#ffffff'
-# set -g status-interval 1
 
 # Add truecolor support
 # set -sa terminal-overrides ",screen-256color:RGB"
