--- a/sway/config
+++ b/sway/config
@@ -14,19 +14,26 @@ set $right l
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+# output * bg /img.png fill #282c34
+exec swaybg -c 000000
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 # output "Dell Inc. DELL P2415Q D8VXF7AA0TUB" scale 1.5 mode 3840x2160@30Hz
 # output "Dell Inc. DELL P2415Q D8VXF79M0FVL" scale 1.5 mode 3840x2160@30Hz
 
 ### Idle configuration
-set $swaylock "swaylock -f -k -l -s fill -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png"
+set $swaylock "swaylock -e -f -F -k -l -s fill -i /home/jesper/Pictures/wallpapers/177_rhr36Xh.jpg"
 
 exec swayidle -w \
          timeout 600 $swaylock \
-         timeout 900 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep $swaylock
+         timeout 900 'swaymsg "output * power off"' \
+         timeout 1200 'systemctl suspend' \
+         resume 'swaymsg "output * power on"' \
+         before-sleep 'swaylock -f'
+
+# set $laptop eDP-1
+# bindswitch --reload --locked lid:on output $laptop disable
+# bindswitch --reload --locked lid:off output $laptop enable
 
 ## Input configuration
 # You can get the names of your inputs by running: swaymsg -t get_inputs
@@ -249,13 +256,19 @@ bindsym Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focus
 # Take a Screenshot with the region select
 bindsym $mod+x exec grim -g "$(slurp)" - | swappy -f -
 
+assign [app_id="Alacritty"] 1
+assign [class="Google-chrome"] 2
+assign [class="obsidian"] 3
+assign [class="Slack"] 4
+
 # Background apps
 exec --no-startup-id nm-applet --indicator
 exec --no-startup-id copyq
-# exec --no-startup-id playerctld daemon
 exec --no-startup-id blueman-applet
 exec --no-startup-id qalculate-gtk
-exec --no-startup-id darkman
+exec --no-startup-id darkman run
+exec --no-startup-id dropbox
+exec --no-startup-id 1password
 # exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
 
 set $connectCheck nm-online --quiet --timeout=300
@@ -263,8 +276,8 @@ set $connectCheck nm-online --quiet --timeout=300
 # Startup applications
 exec alacritty --command tmux
 exec obsidian
-exec google-chrome-stable
+exec google-chrome-stable --profile-directory="Default"
 
-# exec weekday && $connectCheck && slack
+exec weekday && $connectCheck && slack
 
 # vim: ft=i3config formatoptions-=t
