--- a/sway/config
+++ b/sway/config
@@ -31,9 +31,9 @@ exec swayidle -w \
          resume 'swaymsg "output * power on"' \
          before-sleep 'swaylock -f'
 
-# set $laptop eDP-1
-# bindswitch --reload --locked lid:on output $laptop disable
-# bindswitch --reload --locked lid:off output $laptop enable
+set $laptop eDP-1
+bindswitch --reload --locked lid:on output $laptop disable
+bindswitch --reload --locked lid:off output $laptop enable
 
 ## Input configuration
 # You can get the names of your inputs by running: swaymsg -t get_inputs
@@ -268,8 +268,6 @@ exec --no-startup-id blueman-applet
 exec --no-startup-id qalculate-gtk
 exec --no-startup-id darkman run
 exec --no-startup-id dropbox
-exec --no-startup-id 1password
-# exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
 
 set $connectCheck nm-online --quiet --timeout=300
 
@@ -279,5 +277,7 @@ exec obsidian
 exec google-chrome-stable --profile-directory="Default"
 
 exec weekday && $connectCheck && slack
+
+include ~/dotfiles/sway/`hostname`.conf
 
 # vim: ft=i3config formatoptions-=t
