--- a/alacritty.toml
+++ b/alacritty.toml
@@ -7,16 +7,16 @@ duration = 0
 TERM = "xterm-256color"
 
 [font]
-size = 15
+size = 20
 
 [font.normal]
 family = "Inconsolata Nerd Font"
 style = "Regular"
 
-[[keyboard.bindings]]
-chars = "#"
-key = "Key3"
-mods = "Alt"
+# [[keyboard.bindings]]
+# chars = "#"
+# key = "Key3"
+# mods = "Alt"
 
 [selection]
 save_to_clipboard = true
