--- a/sway/config
+++ b/sway/config
@@ -22,18 +22,31 @@ exec swaybg -c 000000
 # output "Dell Inc. DELL P2415Q D8VXF79M0FVL" scale 1.5 mode 3840x2160@30Hz
 
 ### Idle configuration
-set $swaylock "swaylock -e -f -F -k -l -s fill -i /home/jesper/Pictures/wallpapers/177_rhr36Xh.jpg"
+set $swaylock "swaylock -f -F -k -l -i ~/Pictures/wallpapers/077_IIprHhw.jpg"
+         # timeout 3600 'echo "swayidle suspending" | systemd-cat -p warning && systemctl suspend' \
 
+
+# timeout 1200 'echo "swayidle displays off" | systemd-cat -p warning && swaymsg "output * power off"' \
 exec swayidle -w \
          timeout 600 $swaylock \
-         timeout 900 'swaymsg "output * power off"' \
-         timeout 1200 'systemctl suspend' \
          resume 'swaymsg "output * power on"' \
          before-sleep 'swaylock -f'
 
 set $laptop eDP-1
 bindswitch --reload --locked lid:on output $laptop disable
 bindswitch --reload --locked lid:off output $laptop enable
+bindsym $mod+F12 swaymsg output $laptop enable
+bindsym $mod+Shift+F12 swaymsg output $laptop disable
+
+# Ensure that the laptop screen state is kept when lid is checked
+exec_always ~/bin/laptop-lid-check.sh
+
+# Stores only text data
+exec wl-paste --type text --watch cliphist store
+# Stores only image data
+exec wl-paste --type image --watch cliphist store
+# bindsym $mod+v exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bindsym ctrl+alt+v exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 ## Input configuration
 # You can get the names of your inputs by running: swaymsg -t get_inputs
@@ -43,7 +56,7 @@ input "type:keyboard" {
   xkb_layout us,dk
   repeat_delay 250
   repeat_rate 50
-  xkb_options caps:escape_shifted_capslock,grp:rctrl_rshift_toggle
+  xkb_options caps:escape_shifted_capslock,grp:win_space_toggle
 }
 
 input "type:touchpad" {
@@ -80,6 +93,11 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 #
 # Workspaces:
 #
+    bindsym $mod+Tab workspace next
+    bindsym $mod+Shift+Tab workspace prev
+
+    bindsym $mod+p move workspace to output right
+
     # Switch to workspace
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
@@ -167,13 +185,14 @@ include /etc/sway/config.d/*
 set $mod Mod4
 
 # Hide window titles
-font pango:monospace 0.00001
+# disable_titlebar yes
+font pango:Inconsolata Nerd Font 10
 titlebar_border_thickness 0
 titlebar_padding 0
 
 bar {
   swaybar_command waybar
-  font pango:Inconsolata Nerd Font 14
+  font pango:Inconsolata Nerd Font 16
   # tray_output DP-4
   # separator_symbol " | "
   position top
@@ -186,7 +205,7 @@ bar {
   # }
 }
 
-bindsym $mod+Home exec --no-startup-id swaylock -c 000000
+bindsym $mod+Home exec --no-startup-id $swaylock
 bindsym $mod+End exec --no-startup-id systemctl suspend
 
 # Desktop media control
@@ -216,8 +235,6 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
-bindsym $mod+p move workspace to output right
-
 # reload or restart sway
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
@@ -225,7 +242,7 @@ bindsym $mod+Shift+r restart
 # for_window [all] border pixel 2
 
 # file-browser
-bindsym $mod+n exec pcmanfm
+bindsym $mod+n exec thunar
 
 # Show a floating calc terminal with Mod+c https://github.com/Qalculate/libqalculate
 for_window [app_id="qalculate-gtk"] floating enable, resize set 800 400, move position center
@@ -241,7 +258,7 @@ bindsym $mod+c [app_id="qalculate-gtk"] scratchpad show
 # bindsym $mod+minus scratchpad show
 # bindsym $mod+v exec alacritty -t "Temp Vim" -e ~/bin/tempvim
 
-bindsym ctrl+alt+v exec copyq menu
+# bindsym ctrl+alt+v exec copyq menu
 
 # Fix handing of popups
 for_window [app_id="copyq"] floating enable
@@ -263,11 +280,15 @@ assign [class="Slack"] 4
 
 # Background apps
 exec --no-startup-id nm-applet --indicator
-exec --no-startup-id copyq
+# exec --no-startup-id copyq
 exec --no-startup-id blueman-applet
 exec --no-startup-id qalculate-gtk
 exec --no-startup-id darkman run
 exec --no-startup-id dropbox
+exec --no-startup-id 1password --silent
+# exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
+
+# exec setxkbmap -option compose:menu
 
 set $connectCheck nm-online --quiet --timeout=300
 
