--- a/hyprland.conf
+++ b/hyprland.conf
@@ -9,7 +9,7 @@ monitor=eDP-1,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & alacritty
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -126,8 +126,8 @@ windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, E, exec, $terminal
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, N, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -140,6 +140,10 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, l, movefocus, l
+bind = $mainMod, h, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
