--- a/hyprland.conf
+++ b/hyprland.conf
@@ -17,7 +17,8 @@ exec-once = waybar & hyprpaper & alacritty
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+# $menu = wofi --show drun
+$menu = rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 18' -show combi -icon-theme 'Papirus' -show-icons
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -30,6 +31,9 @@ input {
     kb_model =
     kb_options =
     kb_rules =
+
+    repeat_delay = 250
+    repeat_rate = 50
 
     follow_mouse = 1
 
@@ -128,7 +132,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, E, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, N, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
@@ -180,3 +184,35 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Copy/paste
+exec-once = wl-paste --type text --watch cliphist store
+# Stores only image data
+exec-once = wl-paste --type image --watch cliphist store
+bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+
+# Desktop media control
+bind = $mainMod, Up, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
+bind = $mainMod, Down, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
+bind = $mainMod, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = $mainMod, Return, exec, playerctl play-pause
+bind = $mainMod, Right, exec, playerctl next
+bind = $mainMod, Left, exec, playerctl previous
+
+# Take a screenshot of active screen
+bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') -t jpeg ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg
+# Take a Screenshot with the region select
+bind = $mainMod, X, exec, grim -g "$(slurp)" - | swappy -f -
+
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +10%
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# Background apps
+exec-once = nm-applet --indicator
+exec-once = blueman-applet
+# exec-once = qalculate-gtk
+exec-once = dropbox
