--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,15 +1,25 @@
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,preferred,auto,1
+$h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
+$h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
+monitor = eDP-1, 1920x1200@60, 0x0, 1
+monitor = $h32, highres, 1920x0, 1
+monitor = $h27, highres, 5760x0, 1
+
+workspace = 1, monitor:$h32, default:true, persistent:true
+workspace = 2, monitor:$h32, persistent:true
+workspace = 3, monitor:$h27, default:true, persistent:true
+workspace = 4, monitor:$h27, persistent:true
+
+## Lid is opened
+bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
+## Lid is closed
+bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & alacritty
+exec-once = waybar & hyprpaper
+exec-once = alacritty --command tmux & google-chrome-stable --profile-directory=Default & obsidian
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -198,6 +208,9 @@ bind = $mainMod, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = $mainMod, Return, exec, playerctl play-pause
 bind = $mainMod, Right, exec, playerctl next
 bind = $mainMod, Left, exec, playerctl previous
+
+bind = $mainMod, HOME, exec, hyprlock
+bind = $mainMod, END, exec, systemctl suspend
 
 # Take a screenshot of active screen
 bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') -t jpeg ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg
