--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
+  tmux-plugins/tmux-yank         \
   niksingh710/minimal-tmux-status
 "
 
@@ -54,9 +55,9 @@ bind -r L resize-pane -R 10
 set -g mouse on
 
 # Clipboard on linux
-if-shell "uname -a | grep Linux" \
-  'set-option -s set-clipboard off' \
-  'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"'
+# if-shell "uname -a | grep Linux" \
+#   'set-option -s set-clipboard off' \
+#   'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"'
 
 # Renumber windows when a window is closed
 set-option -g renumber-windows on
