--- a/hyprland.conf
+++ b/hyprland.conf
@@ -10,6 +10,11 @@ workspace = 2, monitor:$h32, persistent:true
 workspace = 3, monitor:$h27, default:true, persistent:true
 workspace = 4, monitor:$h27, persistent:true
 
+$w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
+$w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
+monitor = $w1, highres, 1920x0, 1
+monitor = $w2, highres, 5760x0, 1
+
 ## Lid is opened
 bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
 ## Lid is closed
@@ -18,7 +23,7 @@ bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper
+exec-once = waybar -c ~/.config/waybar/config_hypr & hyprpaper
 exec-once = alacritty --command tmux & google-chrome-stable --profile-directory=Default & obsidian
 
 # Source a file (multi-file configs)
