--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,4 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
+# home
 $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
 $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
 monitor = eDP-1, 1920x1200@60, 0x0, 1
@@ -10,6 +11,7 @@ workspace = 2, monitor:$h32, persistent:true
 workspace = 3, monitor:$h27, default:true, persistent:true
 workspace = 4, monitor:$h27, persistent:true
 
+# work
 $w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
 $w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
 monitor = $w1, highres, 1920x0, 1
@@ -25,6 +27,7 @@ bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
 # Execute your favorite apps at launch
 exec-once = waybar -c ~/.config/waybar/config_hypr & hyprpaper
 exec-once = alacritty --command tmux & google-chrome-stable --profile-directory=Default & obsidian
+exec-once = slack
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -41,10 +44,10 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = us,dk
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     repeat_delay = 250
@@ -147,7 +150,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, E, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod SHIFT, End, exit,
 bind = $mainMod, N, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
@@ -234,3 +237,4 @@ exec-once = nm-applet --indicator
 exec-once = blueman-applet
 # exec-once = qalculate-gtk
 exec-once = dropbox
+exec-once = solaar
