--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,7 +2,8 @@
 # home
 $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
 $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
-monitor = eDP-1, 1920x1200@60, 0x0, 1
+
+monitor = eDP-1, highres, 0x0, 1
 monitor = $h32, highres, 1920x0, 1
 monitor = $h27, highres, 5760x0, 1
 
@@ -17,9 +18,9 @@ $w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
 monitor = $w1, highres, 1920x0, 1
 monitor = $w2, highres, 5760x0, 1
 
-## Lid is opened
+# Lid is opened
 bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
-## Lid is closed
+# Lid is closed
 bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -132,16 +133,16 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+#device:epic-mouse-v1 {
+    #sensitivity = -0.5
+#}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
