--- a/hyprland.conf
+++ b/hyprland.conf
@@ -66,8 +66,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 0
+    gaps_out = 0
     border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -81,11 +81,11 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 0
 
     blur {
         enabled = false
-        size = 3
+        size = 2
         passes = 1
     }
 
@@ -96,7 +96,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -142,7 +142,7 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -163,10 +163,13 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = $mainMod, l, movefocus, l
-bind = $mainMod, h, movefocus, r
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
