--- a/sway/config
+++ b/sway/config
@@ -72,6 +72,7 @@ input "type:touchpad" {
 #
     # Kill focused window
     bindsym $mod+Shift+q kill
+    bindsym $mod+q kill
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
