--- a/hyprland.conf
+++ b/hyprland.conf
@@ -242,3 +242,5 @@ exec-once = blueman-applet
 # exec-once = qalculate-gtk
 exec-once = dropbox
 exec-once = solaar
+exec-once = mako
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
