--- a/sway/config
+++ b/sway/config
@@ -2,8 +2,6 @@
 # Read `man 5 sway` for a complete reference.
 
 ### Variables
-#
-# Logo key. Use Mod1 for Alt.
 set $mod Mod4
 # Home row direction keys, like vim
 set $left h
@@ -14,8 +12,8 @@ set $right l
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-# output * bg /img.png fill #282c34
-exec swaybg -c 000000
+output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill #282c34
+# exec swaybg -c 000000
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 # output "Dell Inc. DELL P2415Q D8VXF7AA0TUB" scale 1.5 mode 3840x2160@30Hz
@@ -284,15 +282,12 @@ assign [class="Slack"] 4
 
 # Background apps
 exec --no-startup-id nm-applet --indicator
-# exec --no-startup-id copyq
 exec --no-startup-id blueman-applet
 exec --no-startup-id qalculate-gtk
 # exec --no-startup-id darkman run
 exec --no-startup-id dropbox
 exec --no-startup-id 1password --silent
 # exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
-
-# exec setxkbmap -option compose:menu
 
 set $connectCheck nm-online --quiet --timeout=300
 
