--- a/hyprland.conf
+++ b/hyprland.conf
@@ -18,6 +18,11 @@ $w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
 monitor = $w1, highres, 1920x0, 1
 monitor = $w2, highres, 5760x0, 1
 
+#workspace = 1, monitor:$w1, default:true, persistent:true
+#workspace = 2, monitor:$w1, persistent:true
+#workspace = 3, monitor:$w2, default:true, persistent:true
+#workspace = 4, monitor:$w2, persistent:true
+
 # Lid is opened
 bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
 # Lid is closed
@@ -148,11 +153,10 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
+bind = $mainMod CTRL, l, movecurrentworkspacetomonitor, r
+bind = $mainMod CTRL, h, movecurrentworkspacetomonitor, l
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, E, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, End, exit,
-bind = $mainMod, N, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -221,6 +225,12 @@ bind = $mainMod, Return, exec, playerctl play-pause
 bind = $mainMod, Right, exec, playerctl next
 bind = $mainMod, Left, exec, playerctl previous
 
+# Mybinds
+bind = $mainMod, E, exec, $terminal
+bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, Q, killactive,
+bind = $mainMod SHIFT, End, exit,
+bind = $mainMod, N, exec, $fileManager
 bind = $mainMod, HOME, exec, hyprlock
 bind = $mainMod, END, exec, systemctl suspend
 
@@ -236,11 +246,16 @@ bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
+windowrulev2 = workspace 1, class:Alacritty
+windowrulev2 = workspace 1, class:google-chrome
+windowrulev2 = workspace 3, class:obsidian
+windowrulev2 = workspace 4, class:Slack
+
 # Background apps
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 # exec-once = qalculate-gtk
 exec-once = dropbox
-exec-once = solaar
-exec-once = mako
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = solaar --window=hide
+#exec-once = mako
+#exec-once = /usr/lib/polkit-kde-authentication-agent-1
