--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,4 +1,3 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
 # home
 $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
 $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
@@ -18,198 +17,39 @@ $w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
 monitor = $w1, highres, 1920x0, 1
 monitor = $w2, highres, 5760x0, 1
 
-#workspace = 1, monitor:$w1, default:true, persistent:true
-#workspace = 2, monitor:$w1, persistent:true
-#workspace = 3, monitor:$w2, default:true, persistent:true
-#workspace = 4, monitor:$w2, persistent:true
+workspace = 1, monitor:$w1, default:true, persistent:true
+workspace = 2, monitor:$w1, persistent:true
+workspace = 3, monitor:$w2, default:true, persistent:true
+workspace = 4, monitor:$w2, persistent:true
 
-# Lid is opened
-bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
-# Lid is closed
-bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-exec-once = waybar -c ~/.config/waybar/config_hypr & hyprpaper
-exec-once = alacritty --command tmux & google-chrome-stable --profile-directory=Default & obsidian
-exec-once = slack
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# Set programs that you use
-$terminal = alacritty
-$fileManager = thunar
-# $menu = wofi --show drun
-$menu = rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 18' -show combi -icon-theme 'Papirus' -show-icons
-
-# Some default env vars.
+# env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-input {
-    kb_layout = us,dk
-    kb_variant =
-    kb_model =
-    kb_options = grp:alt_shift_toggle
-    kb_rules =
+source = ~/.config/hypr/ui.conf
+source = ~/.config/hypr/hardware.conf
+source = ~/.config/hypr/workspaces.conf
+source = ~/.config/hypr/media-keys.conf
 
-    repeat_delay = 250
-    repeat_rate = 50
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    layout = dwindle
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-}
-
-decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 0
-
-    blur {
-        enabled = false
-        size = 2
-        passes = 1
-    }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-}
-
-animations {
-    enabled = no
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
-dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
-
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
-
-misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-#device:epic-mouse-v1 {
-    #sensitivity = -0.5
-#}
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+# Keybindings
 $mainMod = SUPER
 
-bind = $mainMod CTRL, l, movecurrentworkspacetomonitor, r
-bind = $mainMod CTRL, h, movecurrentworkspacetomonitor, l
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, V, togglefloating,
+# Set programs that you use
+$menu = rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 18' -show combi -icon-theme 'Papirus' -show-icons
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, E, exec, alacritty
+bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, Q, killactive,
+bind = $mainMod SHIFT, End, exit,
+bind = $mainMod, N, exec, thunar
+bind = $mainMod, HOME, exec, hyprlock
+bind = $mainMod, END, exec, systemctl suspend
+bind = $mainMod, C, exec, qalculate-gtk
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-bind = $mainMod SHIFT, h, movewindow, l
-bind = $mainMod SHIFT, l, movewindow, r
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# Take a screenshot of active screen
+bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') -t jpeg ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg
+# Take a Screenshot with the region select
+bind = $mainMod, X, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Copy/paste
 exec-once = wl-paste --type text --watch cliphist store
@@ -217,44 +57,31 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
-# Desktop media control
-bind = $mainMod, Up, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
-bind = $mainMod, Down, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
-bind = $mainMod, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mainMod, Return, exec, playerctl play-pause
-bind = $mainMod, Right, exec, playerctl next
-bind = $mainMod, Left, exec, playerctl previous
-
-# Mybinds
-bind = $mainMod, E, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod SHIFT, End, exit,
-bind = $mainMod, N, exec, $fileManager
-bind = $mainMod, HOME, exec, hyprlock
-bind = $mainMod, END, exec, systemctl suspend
-
-# Take a screenshot of active screen
-bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') -t jpeg ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg
-# Take a Screenshot with the region select
-bind = $mainMod, X, exec, grim -g "$(slurp)" - | swappy -f -
-
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +10%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
-
+# Window rules
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = workspace 1, class:Alacritty
 windowrulev2 = workspace 1, class:google-chrome
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
+windowrulev2 = float, class:qalculate-gtk
+
+# Start programs
+exec-once = alacritty --command tmux
+exec-once = google-chrome-stable --profile-directory=Default
+exec-once = obsidian
+exec-once = slack
 
 # Background apps
+exec-once = waybar -c ~/.config/waybar/config_hypr
+exec-once = hyprpaper
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
-# exec-once = qalculate-gtk
+exec-once = qalculate-gtk
 exec-once = dropbox
 exec-once = solaar --window=hide
 #exec-once = mako
