--- a/hypr/workspaces.conf
+++ b/hypr/workspaces.conf
@@ -3,9 +3,11 @@ $mainMod = SUPER
 bind = $mainMod CTRL, l, movecurrentworkspacetomonitor, r
 bind = $mainMod CTRL, h, movecurrentworkspacetomonitor, l
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, V, togglefloating,
+$menu = rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 18' -show combi -icon-theme 'Papirus' -show-icons
 bind = $mainMod, D, exec, $menu
+
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
