--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,16 +35,16 @@ source = ~/.config/hypr/media-keys.conf
 $mainMod = SUPER
 
 # Set programs that you use
-$menu = rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 18' -show combi -icon-theme 'Papirus' -show-icons
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, E, exec, alacritty
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod SHIFT, End, exit,
-bind = $mainMod, N, exec, thunar
+
 bind = $mainMod, HOME, exec, hyprlock
+bind = $mainMod SHIFT, End, exit,
 bind = $mainMod, END, exec, systemctl suspend
+
+bind = $mainMod, E, exec, alacritty
 bind = $mainMod, C, exec, qalculate-gtk
+bind = $mainMod, N, exec, thunar
 
 # Take a screenshot of active screen
 bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') -t jpeg ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg
@@ -56,6 +56,7 @@ exec-once = wl-paste --type text --watch cliphist store
 # Stores only image data
 exec-once = wl-paste --type image --watch cliphist store
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Window rules
 # Example windowrule v1
@@ -78,11 +79,13 @@ exec-once = slack
 
 # Background apps
 exec-once = waybar -c ~/.config/waybar/config_hypr
-exec-once = hyprpaper
+#exec-once = hyprpaper
+exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
-exec-once = qalculate-gtk
+#exec-once = qalculate-gtk
 exec-once = dropbox
 exec-once = solaar --window=hide
+exec-once = udiskie &
 #exec-once = mako
 #exec-once = /usr/lib/polkit-kde-authentication-agent-1
