--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -87,5 +87,5 @@ exec-once = blueman-applet
 exec-once = dropbox
 exec-once = solaar --window=hide
 exec-once = udiskie &
-#exec-once = mako
+exec-once = mako
 #exec-once = /usr/lib/polkit-kde-authentication-agent-1
