--- a/hypr/media-keys.conf
+++ b/hypr/media-keys.conf
@@ -1,14 +1,16 @@
+$volStep = 5%
+
 # Desktop media control
-bind = $mainMod, Up, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
-bind = $mainMod, Down, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
+bind = $mainMod, Up, exec, pactl set-sink-volume @DEFAULT_SINK@ +$volStep
+bind = $mainMod, Down, exec, pactl set-sink-volume @DEFAULT_SINK@ -$volStep
 bind = $mainMod, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = $mainMod, Return, exec, playerctl play-pause
 bind = $mainMod, Right, exec, playerctl next
 bind = $mainMod, Left, exec, playerctl previous
 
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +10%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +$volStep
+bind = , XF86MonBrightnessDown, exec, brightnessctl s $volStep-
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +$volStep
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -$volStep
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
